# H753ZITx_ptp_cmake

./: .gitignore  .mxproject  CMakeCache.txt  CMakeLists.txt  H753ZITx_ptp.ioc  README.md  STM32H753ZITx_FLASH.ld  build.ninja  cmake_install.cmake  compile_commands.json  h753zitx.cfg
Core/Inc/: FreeRTOSConfig.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_eth.c
LWIP/App/: lwip.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
ptp/: constants.h  ptpd.c  ptpd.h
ptp/dep/: constants_dep.h  net.c  ptpd_dep.c  sys_time.c  timer.c
